KSENROLL-13076: Fix spacing for stick header links.
git-svn-id: https://svn.kuali.org/repos/student/enrollment/ks-core/trunk@70629 0ac02d80-fb3f-11dc-a574-c57244a850eb

--- a/ks-common/ks-common-web/src/main/webapp/themes/ksboot/stylesheets/enroll.less
+++ b/ks-common/ks-common-web/src/main/webapp/themes/ksboot/stylesheets/enroll.less
@@ -742,8 +742,6 @@ fieldset .uif-smallActionButton {
 .header-right-group {
   /* Alignment of the Right Content Area  */
   float: right;
-  padding-right: 13px;
-
     /* Altering the Default Link Colour in Header Navigation */
     a {
       color: @navText;
@@ -754,8 +752,8 @@ fieldset .uif-smallActionButton {
       margin-bottom: 0px;
     }
 
-    .navbar .nav > li > a {
-      padding: 10px 7px 10px;
+    .nav > li > a {
+      padding: 10px 0;
       text-transform: capitalize;
     }
 
